Bug 947683 - Fix --disable-threadsafe shell builds on OS X. r=luke, a=NPOTB